@@ -90,7 +90,9 @@ public class BasicTest {
             localRepository = "";
         }
 
-        return new Option[]{
+        List<Option> options = new ArrayList<>();
+
+        Option[] commonOptions = new Option[]{
                 KarafDistributionOption.debugConfiguration("5005", false),
                 KarafDistributionOption.logLevel(LogLevel.INFO),
                 KarafDistributionOption.editConfigurationFilePut("etc/org.ops4j.pax.url.mvn.cfg", "org.ops4j.pax.url.mvn.localRepository", localRepository),
@@ -111,6 +113,42 @@ public class BasicTest {
 //                wrappedBundle(mavenBundle("com.h2database",
 //                        "h2", "1.4.181"))
         };
+
+        options.addAll(Arrays.asList(commonOptions));
+
+        if (JavaVersionUtil.getMajorVersion() >= 9) {
+            Option[] jdk9PlusOptions = new Option[]{
+                    new VMOption("--add-reads=java.xml=java.logging"),
+                    new VMOption("--add-exports=java.base/org.apache.karaf.specs.locator=java.xml,ALL-UNNAMED"),
+                    new VMOption("--patch-module"),
+                    new VMOption("java.base=lib/endorsed/org.apache.karaf.specs.locator-"
+                            + System.getProperty("karaf.version") + ".jar"),
+                    new VMOption("--patch-module"), new VMOption("java.xml=lib/endorsed/org.apache.karaf.specs.java.xml-"
+                    + System.getProperty("karaf.version") + ".jar"),
+                    new VMOption("--add-opens"),
+                    new VMOption("java.base/java.security=ALL-UNNAMED"),
+                    new VMOption("--add-opens"),
+                    new VMOption("java.base/java.net=ALL-UNNAMED"),
+                    new VMOption("--add-opens"),
+                    new VMOption("java.base/java.lang=ALL-UNNAMED"),
+                    new VMOption("--add-opens"),
+                    new VMOption("java.base/java.util=ALL-UNNAMED"),
+                    new VMOption("--add-opens"),
+                    new VMOption("java.naming/javax.naming.spi=ALL-UNNAMED"),
+                    new VMOption("--add-opens"),
+                    new VMOption("java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED"),
+                    new VMOption("--add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED"),
+                    new VMOption("--add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED"),
+                    new VMOption("--add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED"),
+                    new VMOption("--add-exports=jdk.naming.rmi/com.sun.jndi.url.rmi=ALL-UNNAMED"),
+                    new VMOption("-classpath"),
+                    new VMOption("lib/jdk9plus/*" + File.pathSeparator + "lib/boot/*")
+
+            };
+            options.addAll(Arrays.asList(jdk9PlusOptions));
+        }
+
+        return options.toArray(new Option[0]);
     }
 
     @BenchmarkOptions(benchmarkRounds = 100, warmupRounds = 0, concurrency = 10)
